# iree

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml  ci_linux_arm64_clang.yml  ci_linux_x64_clang.yml  ci_linux_x64_clang_debug.yml  pkgci_test_amd_mi250.yml  pkgci_test_amd_mi325.yml  pkgci_test_amd_w7900.yml  pkgci_test_android.yml  pkgci_test_nvidia_t4.yml  pkgci_test_onnx.yml  pkgci_test_pjrt.yml  pkgci_test_riscv64.yml  pkgci_test_sharktank.yml  pkgci_test_tensorflow.yml  pkgci_test_torch.yml  pkgci_unit_test.yml  validate_and_publish_release.yml
compiler/plugins/: iree_compiler_plugin.cmake
compiler/plugins/abft/: BUILD.bazel  CMakeLists.txt
compiler/plugins/abft/src/: ABFTPass.cpp  PluginRegistration.cpp
compiler/plugins/hwacc/: BUILD.bazel  CMakeLists.txt
compiler/plugins/hwacc/src/: PluginRegistration.cpp  ReplaceMatmulWithCall.cpp
compiler/plugins/instrument_matmul/src/: PluginRegistration.cpp
compiler/src/iree/compiler/Pipelines/: Pipelines.cpp
compiler/src/iree/compiler/PluginAPI/: Client.h
runtime/: CMakeLists.txt  hwacc_gemm.cpp
runtime/src/iree/modules/hwacc/: BUILD.bazel  CMakeLists.txt  exports.inl  module.c  module.h
runtime/src/iree/tooling/modules/: BUILD.bazel  (+2 more)
samples/models/resnet/: .gitattributes  abft_compile.sh  abft_tamper_test.sh  abft_test.sh  analyze_output.py  convert_image.py  example_compile_outsource.sh  plot_abft_stats.py  plot_performance.py  tamper_outsource.sh  test.sh
samples/models/resnet/analysis/: plot_thresholds.py
samples/static_library/: simple_mul.mlir  static_library_demo.c
(+1 files in other folders)
