load("//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_register_plugin")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "defs",
    includes = ["src"],
)

cc_library(
    name = "registration",
    srcs = [
        "src/ABFTPass.cpp",
        "src/PluginRegistration.cpp",
    ],
    deps = [
        ":defs",
        "//compiler/src/iree/compiler/PluginAPI",
        "@llvm-project//mlir:IR",
    ],
)

iree_compiler_register_plugin(
    plugin_id = "abft_pass",
    target = ":registration",
)
